# choices13k-stacking

./: .gitignore  PROJECT_LOG.md  README.md  pyproject.toml
results/: bayesian_stacking_4model.nc  bayesian_stacking_5model.nc  hierarchical_bayesian_4model.nc  hierarchical_bayesian_5model.nc  mot_4model.nc  mot_5model.nc  summary_4model.pkl  summary_5model.pkl
scripts/: della_stacking.slurm  della_submit.sh  make_figures.py  plot_saved_results.py  run_bayesian_full.py  run_stacking_mvp.py
slurm/: run_bayesian.slurm  run_stacking.slurm  setup_della.sh
src/stacking/: bayesian.py  config.py  data.py  fitting.py  hierarchical.py  models.py  stacking.py
tests/: test_bayesian.py  test_pipeline.py
