[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "choices13k-stacking"
version = "0.1.0"
description = "Bayesian model stacking on Peterson et al. (2021) choices13k dataset"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
bayesian = ["pymc>=5.0", "arviz>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]
